--- a/RestaurantPicker/RestaurantPicker/Base.lproj/Main.storyboard
+++ b/RestaurantPicker/RestaurantPicker/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F1066" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,18 +16,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Burritos" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vxj-h7-cNy">
-                                <rect key="frame" x="62" y="154" width="238" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vct-ea-w7E">
-                                <rect key="frame" x="144" y="304" width="83" height="30"/>
-                                <state key="normal" title="Pick">
+                                <rect key="frame" x="144" y="304" width="121" height="30"/>
+                                <state key="normal" title="Pick a Restaurant">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="pick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="E85-X8-ZAq"/>
+                                    <action selector="chooseRestaurant:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Aio-kO-Dml"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Pozole" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="31H-oC-kBU">
@@ -36,7 +31,12 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Tacos" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KTl-YE-2RM">
-                                <rect key="frame" x="62" y="68" width="238" height="30"/>
+                                <rect key="frame" x="62" y="28" width="238" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Burritos" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vxj-h7-cNy">
+                                <rect key="frame" x="62" y="119" width="238" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -50,9 +50,9 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="pick1" destination="KTl-YE-2RM" id="7S2-CL-ccr"/>
-                        <outlet property="pick2" destination="Vxj-h7-cNy" id="gza-Oy-MeU"/>
-                        <outlet property="pick3" destination="31H-oC-kBU" id="hFf-xX-NVV"/>
+                        <outlet property="restaurantChoice1" destination="KTl-YE-2RM" id="hj3-ju-5sg"/>
+                        <outlet property="restaurantChoice2" destination="Vxj-h7-cNy" id="tUn-pt-PL3"/>
+                        <outlet property="restaurantChoice3" destination="31H-oC-kBU" id="FuJ-Qg-JFE"/>
                         <segue destination="QTy-sM-XTp" kind="show" identifier="ResultView" id="jgg-Go-dCk"/>
                     </connections>
                 </viewController>
